--- a/personal_site/src/css/styles.css
+++ b/personal_site/src/css/styles.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
-  padding: 4rem 0cqi;
+  padding: 4rem 0rem;
 }
 
 
@@ -39,10 +39,9 @@
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
+    z-index: 1;
 }
-.hero-container {
-    
-}
+
 
 .hero-content {
     display: grid;
@@ -84,4 +83,63 @@
     object-fit: cover;  /* This ensures the image covers the area without stretching */
     border-radius: 10%;
 }
+
+.hero-icons {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+/* About me section*/
+
+.about-me {
+    background-color: #000;
+    padding: 8rem 0;
+    border-top: 2px solid #de080837;
+    height: 100vh;
+}
+
+.about-me-title {
+    margin-bottom: 4rem;
+}
+
+.about-me-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-me-text {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    
+}
+
+.about-me-grid {
+    display: grid;
+    grid-template-columns: 60fr 40fr;
+    gap: 3.5rem;
+    align-items: center;
+}
+
+.about-me-skills {
+    border-left: 2px solid #de080837;
+    padding-left: 2rem;
+}
+
+.about-me-skills-list {
+    font-size: 1.8rem;
+    list-style: none; 
+}
+.about-me-skills-list li {
+    margin-bottom: 2rem;
+}
+.about-me-skills-item {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+/* Projects Section */
+
+
 
