--- a/personal_site/src/css/general.css
+++ b/personal_site/src/css/general.css
@@ -60,9 +60,35 @@ body {
 
 .font-size-h1 {
   font-size: 4.8rem;
-  font-weight: 700;
+  font-weight: bold;
 }
 
 .font-size-h2 {
   font-size: 3rem;
 }
+
+/* Add this new section for animations */
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Project Card */
+
+.project-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(29, 24, 54,0.6);
+  border-radius: 1rem;
+  color: white;
+  box-shadow: 0 0 1rem 0.1rem rgba(255, 253, 253, 0.8);
+  height: 50rem;
+}
+
