--- a/personal_site/src/css/general.css
+++ b/personal_site/src/css/general.css
@@ -58,6 +58,8 @@ body {
   line-height: 1.5;
 }
 
+
+
 .font-size-h1 {
   font-size: 4.8rem;
   font-weight: bold;
@@ -65,6 +67,10 @@ body {
 
 .font-size-h2 {
   font-size: 3rem;
+}
+
+.font-size-h3 {
+  font-size: 2rem;
 }
 
 /* Add this new section for animations */
@@ -81,14 +87,5 @@ body {
 
 /* Project Card */
 
-.project-card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(29, 24, 54,0.6);
-  border-radius: 1rem;
-  color: white;
-  box-shadow: 0 0 1rem 0.1rem rgba(255, 253, 253, 0.8);
-  height: 50rem;
-}
+
 
