--- a/personal_site/src/css/styles.css
+++ b/personal_site/src/css/styles.css
@@ -31,6 +31,17 @@
     letter-spacing: 0.05em; /* Add this line */
   }
 
+.header-resume {
+    background-color: #FF6666;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+}
+
+.header-resume:hover, .header-resume:active {
+    background-color: #fb8080;
+    transition: all 0.5s ease-in-out;
+}
+
 /* Hero Section */
 
 .hero {
@@ -93,7 +104,7 @@
 /* About me section*/
 
 .about-me {
-    background-color: #000;
+    background-image: url('../images/starry.jpg');
     padding: 8rem 0;
     border-top: 2px solid #de080837;
     height: 100vh;
@@ -146,7 +157,13 @@
     background-color: #000;
     padding: 8rem 0rem;
     border-top: 2px solid #de080837;
-    height: 100vh;
+}
+
+.project-description {
+    display: grid;
+    grid-template-columns: 60fr 40fr;
+    margin-top: 4rem;
+    
 }
 
 .project-grid {
@@ -154,6 +171,77 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 6.5rem;
-    align-items: center;
+    align-items: start;
+}
+
+.project-card {
+    justify-content: center;
+    background-color: rgb(29, 24, 54,0.6);
+    border-radius: 1rem;
+    color: white;
+    box-shadow: 0 0 1rem 0.1rem rgba(255, 253, 253, 0.8);
+    padding: 2rem;  
+
+    transform: scale(1);
+    transition: all 0.5s ease-in-out;
+  }
+
+.project-card:hover {
+    transform: scale(1.05);
+    transition: all 0.5s ease-in-out;
+    box-shadow: 0 0 1rem 0.1rem rgba(241, 138, 138, 0.8);
+}
+
+.project-image-container {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+
+.project-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.project-image {
+    width: 100%;
+    height: 22rem;
+    object-fit: cover;
+    border-radius: 1rem;
+  }
+
+.project-time {
+    font-size: 1.2rem;
+    color: #ccc;
+    margin-bottom: 1.5rem;
+  }
+    
+
+.project-p {
+    font-size: 1.4rem;
+    color: #ccc;
+    line-height: 1.5;
+  }
+
+.project-link {
+    font-size: 1.2rem;
+    margin-top: 1.5rem;
+    text-decoration: none;
+}
+
+.project-tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-top: 1.5rem;
+    justify-content: center;
+}
+
+.project-tag {
+    background-color: #FF6666;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    font-weight: 600;
+    color: #fff;
 }
 
