--- a/personal_site/src/css/general.css
+++ b/personal_site/src/css/general.css
@@ -15,7 +15,6 @@ body {
   font-family: "Montserrat", sans-serif;
   font-family: 400;
   line-height: 1;
-  /* background-color: #111; */
 }
 
 .container {
@@ -24,7 +23,7 @@ body {
 }
 
 .color {
-  color: #fff;
+  color: #ddd;
 }
 
 .color-pink {
@@ -54,7 +53,7 @@ body {
 }
 
 .font-size-p {
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 1.5;
 }
 
@@ -85,7 +84,6 @@ body {
   }
 }
 
-/* Project Card */
 
 
 
