--- a/personal_site/src/css/styles.css
+++ b/personal_site/src/css/styles.css
@@ -1,10 +1,30 @@
+
+
+header {
+    z-index: 100;
+    margin-left: auto;
+    margin-right: auto;
+      position: fixed;
+      left: 0;
+      right: 0;
+      transition: transform 0.3s ease-in-out;
+  }
+  
+  header.sticky {
+      background-color: #0e0c0cf2;
+  }
+
 .header-container {
+    max-width: 120rem;
+    margin-left: auto;
+    margin-right: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
-  padding: 4rem 0rem;
+  padding: 2.5rem 0rem;
 }
+  
 
 
 .header-container .nav-links {
@@ -49,7 +69,6 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100vh;
     z-index: 1;
 }
 
@@ -57,9 +76,9 @@
 .hero-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    justify-content: space-evenly;
     align-items: center;
-    padding: 10rem 0rem;
+    padding-top: 25rem;
+    padding-bottom: 40rem;
 }
 
 
@@ -104,9 +123,9 @@
 /* About me section*/
 
 .about-me {
-    background-image: url('../images/starry.jpg');
+    /* background-image: url('../images/starry.jpg'); */
+    background-color: #090911;
     padding: 8rem 0;
-    border-top: 2px solid #de080837;
     height: 100vh;
 }
 
@@ -134,7 +153,7 @@
 }
 
 .about-me-skills {
-    border-left: 2px solid #de080837;
+    border-left: 2px solid  #fb8080;
     padding-left: 2rem;
 }
 
@@ -154,9 +173,9 @@
 /* Projects Section */
 
 .projects {
-    background-color: #000;
+    background-color: #0e0e1a;
     padding: 8rem 0rem;
-    border-top: 2px solid #de080837;
+    /* border-top: 2px solid #de080837; */
 }
 
 .project-description {
@@ -164,6 +183,12 @@
     grid-template-columns: 60fr 40fr;
     margin-top: 4rem;
     
+}
+
+.project-paragraph {
+    border-left: 0.2rem solid #fb8080;
+    padding-left: 1rem;
+
 }
 
 .project-grid {
@@ -245,3 +270,37 @@
     color: #fff;
 }
 
+/* Footer */
+
+.footer {
+    background-color: #151414;
+    padding: 4rem 0rem;
+    /* border-top: 2px solid  #fb8080; */
+}
+
+.footer-h1 {
+    font-size: 2.4rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+}
+
+.footer-p {
+    font-size: 1.4rem;
+    color: #ccc;
+    line-height: 1.5;
+    margin-bottom: 2rem;
+  }
+
+.footer-links {
+    display: flex;
+    gap: 1.5rem;
+}
+
+.footer-link { 
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.4rem;
+    background-color: #333;
+    padding: 2rem 2rem;
+    border-radius: 1rem;
+}
