--- a/personal_site/src/css/general.css
+++ b/personal_site/src/css/general.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
 }
 
 
@@ -15,6 +16,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-family: 400;
   line-height: 1;
+  background-color: #000;
 }
 
 .container {
